tests/sksl/errors/ReservedNameSizeof.glsl
### Compilation failed:

error: 1: 'sizeof' is a reserved word
int sizeof;
    ^^^^^^
1 error
